--- a/src/HyperMap/HyperMap.csproj
+++ b/src/HyperMap/HyperMap.csproj
@@ -2,21 +2,26 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <PackageId>HyperMap</PackageId>
+        <PackageId>Hyper.Map</PackageId>
         <Version>1.0.0</Version>
-        <Authors>Hyperbolc Solutions</Authors>
-        <Company>Hyperbolc Solutions</Company>
+        <Authors>Hyperbolic Solutions</Authors>
+        <Company>Hyperbolic Solutions</Company>
         <Title>Hyperbolic Mapping Framework</Title>
         <PackageProjectUrl>https://github.com/hypersolutions/hypermap</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/hypersolutions/hypermap/blob/master/LICENSE</PackageLicenseUrl>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <Description>Object mapping framework utilising the Roslyn compiler</Description>
         <Copyright>Hyperbolic Solutions 2019</Copyright>
         <PackageTags>Automapping Roslyn</PackageTags>
+        <RepositoryUrl>https://github.com/hypersolutions/hypermap</RepositoryUrl>
+        <RepositoryType>github</RepositoryType>
+        <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     </PropertyGroup>
-
+    
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.2.1" />
     </ItemGroup>
-    
+
+    <ItemGroup>
+        <None Include="..\..\LICENSE.txt" Pack="true" PackagePath="$(PackageLicenseFile)"/>
+    </ItemGroup>
 </Project>
