--- a/src/HyperMap/HyperMap.csproj
+++ b/src/HyperMap/HyperMap.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>Hyper.Map</PackageId>
-        <Version>1.0.0</Version>
+        <Version>1.0.1</Version>
         <Authors>Hyperbolic Solutions</Authors>
         <Company>Hyperbolic Solutions</Company>
         <Title>Hyperbolic Mapping Framework</Title>
@@ -15,6 +15,7 @@
         <RepositoryUrl>https://github.com/hypersolutions/hypermap</RepositoryUrl>
         <RepositoryType>github</RepositoryType>
         <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+        <PackageReleaseNotes>Contains a bug fix to the same assembly being used twice to build mappings</PackageReleaseNotes>
     </PropertyGroup>
     
     <ItemGroup>
